added caching for api calls, datarequests, and newsletter

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -46,6 +46,25 @@
   }
 }
 
+@media #{$medium-up} {
+  .valign-middle {
+    display: table;
+    > .columns {
+      display: table-cell;
+      vertical-align: middle;
+    }
+    > .columns, > [class*="column"] + [class*="column"]:last-child {
+      float: none;
+    }
+  }
+  .no-margin {
+    margin: 0;
+  }
+}
+
+
+
+
 // 02. Latest Tweets
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 #latest-tweets {
