--- a/scss/app.scss
+++ b/scss/app.scss
@@ -24,6 +24,7 @@ Text Domain: wprdc
 "foundation/components/flex-video",
 "foundation/components/labels",
 "foundation/components/orbit",
+"foundation/components/reveal",
 "foundation/components/grid",
 "foundation/components/inline-lists",
 "foundation/components/tables",
