--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -118,7 +118,7 @@ $wprdc-blue   : #2ba6cb;
 
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
+$primary-color: $wprdc-blue;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
