--- a/scss/app.scss
+++ b/scss/app.scss
@@ -26,6 +26,8 @@ Text Domain: wprdc
 "foundation/components/orbit",
 "foundation/components/reveal",
 "foundation/components/grid",
+"foundation/components/pagination",
+"foundation/components/panels",
 "foundation/components/inline-lists",
 "foundation/components/tables",
 "foundation/components/thumbs",
