--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1,9 +1,7 @@
 // Foundation by ZURB
 // foundation.zurb.com
 // Licensed under MIT Open Source
-
 //
-
 // Table of Contents
 // Foundation Settings
 //
@@ -47,13 +45,10 @@
 // 33. Tooltips
 // 34. Top Bar
 // 36. Visibility Classes
-
 // a. Base
 // - - - - - - - - - - - - - - - - - - - - - - - - -
-
 // This is the default html and body font-size for the base rem value.
 // $rem-base: 16px;
-
 // Allows the use of rem-calc() or lower-bound() in your settings
 @import "foundation/functions";
 
@@ -87,7 +82,7 @@ $include-html-global-classes: $include-html-classes;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to define default font stacks
-$font-family-sans-serif: 'Lato', 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+$font-family-sans-serif: 'Titillium Web', sans-serif;
 $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
@@ -95,27 +90,26 @@ $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 // $font-weight-normal: normal !default;
 // $font-weight-bold: bold !default;
 
-$white       : #FFFFFF;
-$ghost       : #FAFAFA;
-$snow        : #F9F9F9;
-$vapor       : #F6F6F6;
-$white-smoke : #F5F5F5;
-$silver      : #EFEFEF;
-$smoke       : #EEEEEE;
-$gainsboro   : #DDDDDD;
-$iron        : #CCCCCC;
-$base        : #AAAAAA;
-$aluminum    : #999999;
-$jumbo       : #888888;
-$monsoon     : #777777;
-$steel       : #666666;
-$charcoal    : #555555;
-$tuatara     : #444444;
-$oil         : #333333;
-$jet         : #222222;
-$black       : #000000;
-$wprdc-blue   : #2ba6cb;
-
+$white: #FFFFFF;
+$ghost: #FAFAFA;
+$snow: #F9F9F9;
+$vapor: #F6F6F6;
+$white-smoke: #F5F5F5;
+$silver: #EFEFEF;
+$smoke: #EEEEEE;
+$gainsboro: #DDDDDD;
+$iron: #CCCCCC;
+$base: #AAAAAA;
+$aluminum: #999999;
+$jumbo: #888888;
+$monsoon: #777777;
+$steel: #666666;
+$charcoal: #555555;
+$tuatara: #444444;
+$oil: #333333;
+$jet: #2A313D;
+$black: #000000;
+$wprdc-blue: #2C9AE9;
 
 // We use these as default colors throughout
 $primary-color: $wprdc-blue;
@@ -556,7 +550,6 @@ $block-grid-default-spacing: rem-calc(8);
 // Default radius for dropdown.
 // $f-dropdown-radius: $global-radius;
 
-
 // 09. Dropdown Buttons
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
@@ -899,7 +892,7 @@ $block-grid-default-spacing: rem-calc(8);
 // $orbit-timer-show-progress-bar: false;
 
 // We use these to control the bullet nav styles
-$orbit-bullet-nav-color: rgba(0,0,0,0.3);
+$orbit-bullet-nav-color: rgba(0, 0, 0, 0.3);
 $orbit-bullet-nav-color-active: $white;
 $orbit-bullet-radius: rem-calc(9);
 
